; ModuleID = '/home/carl/AnghaBench/libevent/test/extr_regress_buffer.c_test_evbuffer_empty_reference_prepend.c'
source_filename = "/home/carl/AnghaBench/libevent/test/extr_regress_buffer.c_test_evbuffer_empty_reference_prepend.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.evbuffer = type { i32 }

@.str = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@.str.1 = private unnamed_addr constant [4 x i8] c"foo\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @test_evbuffer_empty_reference_prepend to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_evbuffer_empty_reference_prepend(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.evbuffer*, align 8
  store i8* %0, i8** %2, align 8
  store %struct.evbuffer* null, %struct.evbuffer** %3, align 8
  %4 = call %struct.evbuffer* (...) @evbuffer_new()
  store %struct.evbuffer* %4, %struct.evbuffer** %3, align 8
  %5 = load %struct.evbuffer*, %struct.evbuffer** %3, align 8
  %6 = ptrtoint %struct.evbuffer* %5 to i32
  %7 = call i32 @tt_assert(i32 %6)
  %8 = load %struct.evbuffer*, %struct.evbuffer** %3, align 8
  %9 = call i32 @evbuffer_add_reference(%struct.evbuffer* %8, i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0), i32 0, i32* null, i32* null)
  %10 = load %struct.evbuffer*, %struct.evbuffer** %3, align 8
  %11 = call i32 @evbuffer_validate(%struct.evbuffer* %10)
  %12 = load %struct.evbuffer*, %struct.evbuffer** %3, align 8
  %13 = call i32 @evbuffer_prepend(%struct.evbuffer* %12, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0), i32 3)
  %14 = load %struct.evbuffer*, %struct.evbuffer** %3, align 8
  %15 = call i32 @evbuffer_validate(%struct.evbuffer* %14)
  %16 = load %struct.evbuffer*, %struct.evbuffer** %3, align 8
  %17 = call i64 @evbuffer_pullup(%struct.evbuffer* %16, i32 -1)
  %18 = inttoptr i64 %17 to i8*
  %19 = call i32 @strncmp(i8* %18, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0), i32 3)
  %20 = icmp ne i32 %19, 0
  %21 = xor i1 %20, true
  %22 = zext i1 %21 to i32
  %23 = call i32 @tt_assert(i32 %22)
  %24 = load %struct.evbuffer*, %struct.evbuffer** %3, align 8
  %25 = call i32 @evbuffer_validate(%struct.evbuffer* %24)
  br label %26

26:                                               ; preds = %1
  %27 = load %struct.evbuffer*, %struct.evbuffer** %3, align 8
  %28 = icmp ne %struct.evbuffer* %27, null
  br i1 %28, label %29, label %32

29:                                               ; preds = %26
  %30 = load %struct.evbuffer*, %struct.evbuffer** %3, align 8
  %31 = call i32 @evbuffer_free(%struct.evbuffer* %30)
  br label %32

32:                                               ; preds = %29, %26
  ret void
}

declare dso_local %struct.evbuffer* @evbuffer_new(...) #1

declare dso_local i32 @tt_assert(i32) #1

declare dso_local i32 @evbuffer_add_reference(%struct.evbuffer*, i8*, i32, i32*, i32*) #1

declare dso_local i32 @evbuffer_validate(%struct.evbuffer*) #1

declare dso_local i32 @evbuffer_prepend(%struct.evbuffer*, i8*, i32) #1

declare dso_local i32 @strncmp(i8*, i8*, i32) #1

declare dso_local i64 @evbuffer_pullup(%struct.evbuffer*, i32) #1

declare dso_local i32 @evbuffer_free(%struct.evbuffer*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
